<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgMain" android:padding="5dp">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:gravity="center_vertical" android:background="@drawable/bglogsform">
        <Button android:layout_height="64dp" style="@style/TitleText" android:text="@string/logs_btnxodit" android:id="@+id/btnXodit" android:layout_width="wrap_content"></Button>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/textView1" android:text="@string/logs_txt1" android:gravity="center_vertical" android:textColor="#FFffffff" android:textStyle="bold" android:paddingLeft="5dp"></TextView>
        <Button style="@style/TitleText" android:text="@string/logs_btnpodtverdil" android:id="@+id/btnPodtverdil" android:layout_width="wrap_content" android:layout_height="64dp"></Button>
    </LinearLayout>
    <ListView android:layout_height="wrap_content" android:id="@+id/android:list" android:layout_width="fill_parent" android:cacheColorHint="@color/bgMain"></ListView>
</LinearLayout>
